--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Hey khushi ❤️😊</title>
+  <title>Hey bhavna di❤️😊</title>
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet"><link rel="stylesheet" href="./style.css">
 
@@ -15,19 +15,19 @@
 			<img src="./last.jpeg">
 		</div>
 		<div class="details">
-			<h4 class="color1">Hey miss khushi</h2>
+			<h4 class="color1">Hey dear didu</h2>
 			<h4 class="color2 margin">Here's a surprise for you!! </h3>
-			<p>So dear khushi,</p>
-			<p>There's something i wanna tell you</p>
-			<p> That you're litereally the sweetest,</p>
-			<p>Kindest and purest soul. i've ever known!</p>
+			<p>So dear didu,</p>
+			<p>Firstly, a veryyy happy rakshabandhan!</p>
+			<p>You're litereally so sweet,</p>
+			<p>Loving and cute fr. (merepe gaye ho) !</p>
 			<p> Tysm for being there,</p>
 			<p>Tysm for your existence, </p>
-			<p> Tysm for EVERYTHING dear! </p>
+			<p> Tysm for EVERYTHING dii! </p>
 			<p> Stay happy always! </p>
 			<p>And keep smiling 😊 </p>
 			<p class="text-right">From;</p>
-			<p class="text-right">~your BROest frnd</p>
+			<p class="text-right">~your chota bhai</p>
 			<p class="text-right">🥰🫶</p>
 		</div>
 	</div>
